# fxwidth

./: README.md  pyproject.toml
fxwidth/: __init__.py  alignments.py  coders.py  validators.py
tests/: fakeschema.md  test_fakeschema.py  test_fxwidth.py
